--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Contact</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Education</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span></span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span></span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span></span></a></li>
@@ -333,7 +333,7 @@
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Education</a></li>
               </ul>
             </div>
           </div>
