changed about me

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
 		            <p>I am currently studying in Texas International College , Kathmandu Nepal .
-		            	I love travelling and exploring nature . I am a tireless seeker of knowledge, occassional purveyor of wisdom and also, coincidentally, a graphic designer.
+		            	 I am a tireless seeker of knowledge, occassional purveyor of wisdom and also, coincidentally, a graphic designer. I love travelling and exploring nature .I am also fond of classical music and modern dance .
 		            </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Pooja Poudel</span></li>
